--- a/src/BackendBot.csproj
+++ b/src/BackendBot.csproj
@@ -129,18 +129,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Hotel.cs" />
-    <Compile Include="HotelsQuery.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductsQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BingSpellCheckError.cs" />
-    <Compile Include="Services\BingSpellCheckFlaggedToken.cs" />
-    <Compile Include="Services\BingSpellCheckResponse.cs" />
-    <Compile Include="Services\BingSpellCheckService.cs" />
-    <Compile Include="Services\BingSpellCheckSuggestion.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="LuisBot.json" />
+    <Content Include="BackendBot.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
