--- a/src/BackendBot.csproj
+++ b/src/BackendBot.csproj
@@ -129,9 +129,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CurrentUserPreferences.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductsQuery.cs" />
+    <Compile Include="Models\TransitionType.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\InMemoryProductRepository.cs" />
+    <Compile Include="Repositories\InMemoryRepositoryBase.cs" />
+    <Compile Include="Repositories\InMemoryUserProductRepository.cs" />
+    <Compile Include="Repositories\InMemoryUserRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\PagedResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
